--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" type="image/png" href="/assets//assets/Images/common/common/ns-logo.png">
+    <link rel="icon" type="image/png" href="/assets/Images/common/ns-logo.png">
     <script>
         function loadHTML(selector, url) {
             fetch(url)
@@ -38,10 +38,10 @@
             <section class="company-overview">
                 <div class="company-description">
                     <h2>Кой сме ние?</h2>
-                    <h1>НС Строй</h1>
-                    <p>НС Строй 2024 ЕООД е строително-ремонтна компания. 
+                    <h1>НС Строй 2024. ЕООД</h1>
+                    <p>НС Строй 2024. ЕООД е строително-ремонтна компания. 
                         Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме. Нашият екип от опитни професионалисти работи неуморно в Плевенския регион и цяла България, за да предостави висококачествени строително-ремонтни услуги, които надхвърлят очакванията на нашите клиенти. С фокус върху иновациите, устойчивостта и вниманието към детайлите, ние се стремим да създаваме пространства, които вдъхновяват и издържат във времето.
-                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството. С екипа на НС Строй 2024 можете да бъдете уверени, че вашата визия ще се превърне в реалност.
+                        Независимо дали става въпрос за жилищен, търговски или промишлен проект, ние подхождаме към всяко начинание с всеотдайност, опит и страст към майсторството. С екипа на НС Строй 2024. ЕООД можете да бъдете уверени, че вашата визия ще се превърне в реалност.
                     </p>
                     <div class="contact-us-button">
                         <a href="/html/contact.html">Контакти</a>
@@ -65,16 +65,16 @@
                                 <img src="/assets/Images/common/instagram.png" alt="ns build instagram">
                             </a>
                             <a class="contact-link" href="https://chat.whatsapp.com/JNpcU5lR4ae3tDnk5HNMDf">
-                                <img src="/assets/Images/common/whatsapp.png" alt="ns build instagram">
+                                <img src="/assets/Images/common/whatsapp.png" alt="ns build whatsapp">
                             </a>
                             <a class="contact-link" href="https://t.me/+xITbG-x6yOVjZGZk">
-                                <img src="/assets/Images/common/telegram.png" alt="ns build instagram">
+                                <img src="/assets/Images/common/telegram.png" alt="ns build telegram">
                             </a>
-                            <a class="contact-link" href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
-                                <img src="/assets/Images/common/viber.png" alt="ns build instagram">
+                            <a class="contact-link" href="https://vb.me/letsChatOnViber">
+                                <img src="/assets/Images/common/viber.png" alt="ns build viber">
                             </a>
                             <a class="contact-link" href="https://www.pinterest.com/nsbuild2024/">
-                                <img src="/assets/Images/common/pinterest.png" alt="ns build instagram">
+                                <img src="/assets/Images/common/pinterest.png" alt="ns build pinterest">
                             </a>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
 
         <div class="why-us-container">
             <div class="why-us-title">
-                <h1>Защо да изберете NS Build?</h1>
+                <h1>Защо да изберете НС Строй 2024. ЕООД ?</h1>
                 <h3>Ние се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме.</h3>
             </div>
             <section class="why-us-section">
