--- a/html/blog.html
+++ b/html/blog.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" type="image/png" href="/assets//assets/Images/common/common/ns-logo.png">
+    <link rel="icon" type="image/png" href="/assets/Images/common/ns-logo.png">
     <script>
         function loadHTML(selector, url) {
             fetch(url)
@@ -34,18 +34,35 @@
     <main>
         <section class="blog-posts">
             <article class="blog-post">
-                <h2><a href="post1.html">The Future of Sustainable Construction</a></h2>
-                <p>Published on August 15, 2024</p>
-                <p>Exploring the latest trends in sustainable construction and how they are shaping the future of the industry.</p>
-                <a href="post1.html" class="read-more">Read More</a>
+                <h2><a href="/html/blog.html">Как да изберете надеждна строителна фирма в Плевен. Пътеводител за клиенти</a></h2>
+                <h4>Публикувано на Август 15, 2024</h4>
+                <p>Ако планирате строителен проект в Плевен, изборът на правилната строителна фирма е ключов за успешното му завършване.</p>
+                <p>В този пътеводител ще разгледаме важните фактори, които трябва да вземете предвид при избора на строителна фирма.</p>
+                <p>Ще обсъдим как да проверите лицензи и сертификати, как да оцените предишните проекти и как да сравните оферти.</p>
+                <p>Научете как да осигурите качествено строителство и да избегнете потенциални проблеми.</p>
+                <!-- <a href="/html/blog-posts/blog1.html" class="read-more">Прочети повече</a> -->
             </article>
 
             <article class="blog-post">
-                <h2><a href="post2.html">Top 5 Building Materials of 2024</a></h2>
-                <p>Published on July 20, 2024</p>
-                <p>Discover the top building materials of 2024 and their benefits for your next construction project.</p>
-                <a href="post2.html" class="read-more">Read More</a>
+                <h2><a href="/html/blog.html">Тенденции в строителството в Плевен: Какво да очакваме през 2024 година</a></h2>
+                <h4>Публикувано на Август 16, 2024</h4>
+                <p>Строителството в Плевен преминава през значителни промени и нововъведения.</p>
+                <p>В този блог пост ще разгледаме най-новите тенденции в строителния сектор за 2024 година.</p>
+                <p>Ще се фокусираме на иновациите в строителните материали, устойчивите практики и модерните технологии, които ще променят начина, по който строим.</p>
+                <p>Разберете как тези тенденции могат да влияят на вашия следващ проект и как да се възползвате от тях.</p>
+                <!-- <a href="/html/blog-posts/blog2.html" class="read-more">Прочети повече</a> -->
             </article>
+
+            <article class="blog-post">
+                <h2><a href="/html/blog.html">Плюсове и минуси на различните видове строителни материали: Как да изберете най-доброто за вашия проект в Плевен</a></h2>
+                <h4>Публикувано на Август 21, 2024</h4>
+                <p>Изборът на строителни материали е от съществено значение за качеството и дълготрайността на вашия строителен проект.</p>
+                <p>В този пост ще разгледаме плюсовете и минусите на различни строителни материали, които са популярни в Плевен.</p>
+                <p>Ще се фокусираме върху материали като тухли, бетон, дърво и нови иновации в строителството.</p>
+                <p>Научете как да направите информирания избор на материали, който ще отговори на вашите нужди и бюджет.</p>
+                <!-- <a href="/html/blog-posts/blog3.html" class="read-more">Прочети повече</a> -->
+            </article>
+        </section>
     </main>
     
     <div id="footer"></div>
