--- a/html/footer.html
+++ b/html/footer.html
@@ -3,7 +3,7 @@
         <!-- About Us Section -->
         <div class="for-us">
             <img class="logo" src="/assets/Images/common/ns-logo-white.png" alt="NS Stroi Logo">
-            <p>Ние в НС Строй се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти.</p>
+            <p>Ние в НС Строй 2024. ЕООД се гордеем с нашия ангажимент към съвършенство във всеки проект, който предприемаме с нашият екип от опитни професионалисти.</p>
         </div>
         
         <!-- Services Section -->
@@ -73,7 +73,7 @@
 
     <!-- Copyright Section -->
     <div class="copyright">
-        <p>Всички права запазени &ndash; НС Строй 2024 &copy;</p>
+        <p>Всички права запазени &ndash; НС Строй 2024. ЕООД &copy;</p>
         <a id="developed-by" href="tel:0877226994">
             <h3>Изработено от Евелин Първанов</h3>
         </a>
