--- a/html/navbar.html
+++ b/html/navbar.html
@@ -29,7 +29,7 @@
         <a class="nav-info-link" href="https://t.me/+xITbG-x6yOVjZGZk">
             <img src="/assets/Images/common/telegram.png" alt="ns build telegram">
         </a>
-        <a class="nav-info-link" href="https://www.google.com/url?q=http%3A%2F%2Ftinyurl.com%2F4b9e8jvx&sa=D&sntz=1&usg=AOvVaw1DF493k1Exmy_ZJvHvbiLu">
+        <a class="nav-info-link" href="https://vb.me/letsChatOnViber">
             <img src="/assets/Images/common/viber.png" alt="ns build viber">
         </a>
         <a class="nav-info-link" href="https://www.pinterest.com/nsbuild2024/">
