--- a/html/projects_templates/all-projects.html
+++ b/html/projects_templates/all-projects.html
@@ -34,7 +34,6 @@
     
     <div class="projects-container">
         <div class="projects-card">
-
             <div class="project-card">
                 <a href="/html/projects_templates/sofiq_all.html">
                     <img src="/assets/Images/sofiq/staq9.jpg">
@@ -78,18 +77,19 @@
             </div>
 
             <div class="project-card">
-                <a href="/html/projects_templates/kushta-opanec.html">
-                    <img src="/assets/Images/opanec/1_1.jpg">
-                    <h2>Къща Опанец</h2>
+                <a href="/html/projects_templates/dolni_vudin.html">
+                    <img src="/assets/Images/dolni_vudin/19.jpg">
+                    <h2>Долни Въдин</h2>
                 </a>
             </div>
 
             <div class="project-card">
-                <a href="/html/projects_templates/kushta-opanec.html">
-                    <img src="/assets/Images/opanec/1_1.jpg">
-                    <h2>Къща Опанец</h2>
+                <a href="/html/projects_templates/sofiq-in-progress.html">
+                    <img src="/assets/Images/sofiq-progress/4.jpg">
+                    <h2>София</h2>
                 </a>
             </div>
+        </div>
         </div>
     </div>
 
