--- a/html/bani-html/pleven9kvartal.html
+++ b/html/bani-html/pleven9kvartal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НС Строй</title>
     <link rel="stylesheet" href="/assets/styles/styles.css">
+    <link href="/assets/styles/lightbox.css" rel="stylesheet">
     <script src="/assets/scripts/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,19 +35,36 @@
     <main>
         <div class="photos-container">
             <div class="photos">
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (1).jpg" data-lightbox="gallery" data-title="Image 1"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (1).jpg" alt="Image 1"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (2).jpg" data-lightbox="gallery" data-title="Image 2"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (2).jpg" alt="Image 2"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (3).jpg" data-lightbox="gallery" data-title="Image 3"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (3).jpg" alt="Image 3"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (4).jpg" data-lightbox="gallery" data-title="Image 4"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (4).jpg" alt="Image 4"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (5).jpg" data-lightbox="gallery" data-title="Image 5"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (5).jpg" alt="Image 5"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (6).jpg" data-lightbox="gallery" data-title="Image 6"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (6).jpg" alt="Image 6"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (7).jpg" data-lightbox="gallery" data-title="Image 7"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (7).jpg" alt="Image 7"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (8).jpg" data-lightbox="gallery" data-title="Image 8"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (8).jpg" alt="Image 8"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (9).jpg" data-lightbox="gallery" data-title="Image 9"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (9).jpg" alt="Image 9"></a>
-                <a href="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (10).jpg" data-lightbox="gallery" data-title="Image 10"><img src="/assets/images/bani-snimki/banq-pleven-9kvartal-snimki/1 (10).jpg" alt="Image 10"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (1).jpg" data-lightbox="gallery" data-title="Image 1"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (1).jpg" alt="Image 1"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (2).jpg" data-lightbox="gallery" data-title="Image 2"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (2).jpg" alt="Image 2"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (3).jpg" data-lightbox="gallery" data-title="Image 3"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (3).jpg" alt="Image 3"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (4).jpg" data-lightbox="gallery" data-title="Image 4"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (4).jpg" alt="Image 4"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (5).jpg" data-lightbox="gallery" data-title="Image 5"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (5).jpg" alt="Image 5"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (6).jpg" data-lightbox="gallery" data-title="Image 6"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (6).jpg" alt="Image 6"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (7).jpg" data-lightbox="gallery" data-title="Image 7"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (7).jpg" alt="Image 7"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (8).jpg" data-lightbox="gallery" data-title="Image 8"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (8).jpg" alt="Image 8"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (9).jpg" data-lightbox="gallery" data-title="Image 9"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (9).jpg" alt="Image 9"></a>
+                <a href="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (10).jpg" data-lightbox="gallery" data-title="Image 10"><img src="/assets/Images/bani-snimki/banq-pleven-9kvartal-snimki/1 (10).jpg" alt="Image 10"></a>
             </div>
         </div>
     </main>
+
+    <!-- Lightbox2 JS -->
+    <script src="/assets/scripts/lightbox-plus-jquery.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true,
+            'alwaysShowNavOnTouchDevices': true,
+            'albumLabel': "Image %1 of %2",
+            'fadeDuration': 200,
+            'imageFadeDuration': 200,
+            'disableScrolling': true
+          });
+        });
+      </script>
     
     <footer>
         <div id="footer"></div>
