--- a/html/bani-html/plevendrujba4.html
+++ b/html/bani-html/plevendrujba4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НС Строй</title>
     <link rel="stylesheet" href="/assets/styles/styles.css">
+    <link href="/assets/styles/lightbox.css" rel="stylesheet">
     <script src="/assets/scripts/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,49 +35,66 @@
     <main>
         <div class="photos-container">
             <div class="photos">
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (1).jpg" data-lightbox="gallery" data-title="Image 1"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (1).jpg" alt="Image 1"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (2).jpg" data-lightbox="gallery" data-title="Image 2"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (2).jpg" alt="Image 2"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (3).jpg" data-lightbox="gallery" data-title="Image 3"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (3).jpg" alt="Image 3"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (4).jpg" data-lightbox="gallery" data-title="Image 4"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (4).jpg" alt="Image 4"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (5).jpg" data-lightbox="gallery" data-title="Image 5"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (5).jpg" alt="Image 5"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (6).jpg" data-lightbox="gallery" data-title="Image 6"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (6).jpg" alt="Image 6"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (7).jpg" data-lightbox="gallery" data-title="Image 7"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (7).jpg" alt="Image 7"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (8).jpg" data-lightbox="gallery" data-title="Image 8"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (8).jpg" alt="Image 8"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (9).jpg" data-lightbox="gallery" data-title="Image 9"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (9).jpg" alt="Image 9"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (10).jpg" data-lightbox="gallery" data-title="Image 10"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (10).jpg" alt="Image 10"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (11).jpg" data-lightbox="gallery" data-title="Image 11"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (11).jpg" alt="Image 11"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (12).jpg" data-lightbox="gallery" data-title="Image 12"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (12).jpg" alt="Image 12"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (13).jpg" data-lightbox="gallery" data-title="Image 13"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (13).jpg" alt="Image 13"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (14).jpg" data-lightbox="gallery" data-title="Image 14"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (14).jpg" alt="Image 14"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (15).jpg" data-lightbox="gallery" data-title="Image 15"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (15).jpg" alt="Image 15"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (16).jpg" data-lightbox="gallery" data-title="Image 16"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (16).jpg" alt="Image 16"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (17).jpg" data-lightbox="gallery" data-title="Image 17"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (17).jpg" alt="Image 17"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (18).jpg" data-lightbox="gallery" data-title="Image 18"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (18).jpg" alt="Image 18"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (19).jpg" data-lightbox="gallery" data-title="Image 19"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (19).jpg" alt="Image 19"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (20).jpg" data-lightbox="gallery" data-title="Image 20"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (20).jpg" alt="Image 20"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (21).jpg" data-lightbox="gallery" data-title="Image 21"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (21).jpg" alt="Image 21"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (22).jpg" data-lightbox="gallery" data-title="Image 22"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (22).jpg" alt="Image 22"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (23).jpg" data-lightbox="gallery" data-title="Image 23"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (23).jpg" alt="Image 23"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (24).jpg" data-lightbox="gallery" data-title="Image 24"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (24).jpg" alt="Image 24"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (26).jpg" data-lightbox="gallery" data-title="Image 26"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (26).jpg" alt="Image 26"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (27).jpg" data-lightbox="gallery" data-title="Image 27"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (27).jpg" alt="Image 27"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (28).jpg" data-lightbox="gallery" data-title="Image 28"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (28).jpg" alt="Image 28"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (29).jpg" data-lightbox="gallery" data-title="Image 29"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (29).jpg" alt="Image 29"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (30).jpg" data-lightbox="gallery" data-title="Image 30"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (30).jpg" alt="Image 30"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (31).jpg" data-lightbox="gallery" data-title="Image 31"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (31).jpg" alt="Image 31"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (32).jpg" data-lightbox="gallery" data-title="Image 32"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (32).jpg" alt="Image 32"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (33).jpg" data-lightbox="gallery" data-title="Image 33"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (33).jpg" alt="Image 33"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (34).jpg" data-lightbox="gallery" data-title="Image 34"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (34).jpg" alt="Image 34"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (35).jpg" data-lightbox="gallery" data-title="Image 35"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (35).jpg" alt="Image 35"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (36).jpg" data-lightbox="gallery" data-title="Image 36"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (36).jpg" alt="Image 36"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (37).jpg" data-lightbox="gallery" data-title="Image 37"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (37).jpg" alt="Image 37"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (38).jpg" data-lightbox="gallery" data-title="Image 38"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (38).jpg" alt="Image 38"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (39).jpg" data-lightbox="gallery" data-title="Image 39"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (39).jpg" alt="Image 39"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (40).jpg" data-lightbox="gallery" data-title="Image 40"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (40).jpg" alt="Image 40"></a>
-                <a href="/assets/images/bani-snimki/banq-plewen-drujba4/1 (41).jpg" data-lightbox="gallery" data-title="Image 41"><img src="/assets/images/bani-snimki/banq-plewen-drujba4/1 (41).jpg" alt="Image 41"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (1).jpg" data-lightbox="gallery" data-title="Image 1"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (1).jpg" alt="Image 1"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (2).jpg" data-lightbox="gallery" data-title="Image 2"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (2).jpg" alt="Image 2"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (3).jpg" data-lightbox="gallery" data-title="Image 3"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (3).jpg" alt="Image 3"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (4).jpg" data-lightbox="gallery" data-title="Image 4"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (4).jpg" alt="Image 4"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (5).jpg" data-lightbox="gallery" data-title="Image 5"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (5).jpg" alt="Image 5"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (6).jpg" data-lightbox="gallery" data-title="Image 6"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (6).jpg" alt="Image 6"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (7).jpg" data-lightbox="gallery" data-title="Image 7"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (7).jpg" alt="Image 7"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (8).jpg" data-lightbox="gallery" data-title="Image 8"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (8).jpg" alt="Image 8"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (9).jpg" data-lightbox="gallery" data-title="Image 9"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (9).jpg" alt="Image 9"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (10).jpg" data-lightbox="gallery" data-title="Image 10"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (10).jpg" alt="Image 10"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (11).jpg" data-lightbox="gallery" data-title="Image 11"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (11).jpg" alt="Image 11"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (12).jpg" data-lightbox="gallery" data-title="Image 12"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (12).jpg" alt="Image 12"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (13).jpg" data-lightbox="gallery" data-title="Image 13"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (13).jpg" alt="Image 13"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (14).jpg" data-lightbox="gallery" data-title="Image 14"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (14).jpg" alt="Image 14"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (15).jpg" data-lightbox="gallery" data-title="Image 15"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (15).jpg" alt="Image 15"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (16).jpg" data-lightbox="gallery" data-title="Image 16"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (16).jpg" alt="Image 16"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (17).jpg" data-lightbox="gallery" data-title="Image 17"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (17).jpg" alt="Image 17"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (18).jpg" data-lightbox="gallery" data-title="Image 18"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (18).jpg" alt="Image 18"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (19).jpg" data-lightbox="gallery" data-title="Image 19"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (19).jpg" alt="Image 19"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (20).jpg" data-lightbox="gallery" data-title="Image 20"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (20).jpg" alt="Image 20"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (21).jpg" data-lightbox="gallery" data-title="Image 21"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (21).jpg" alt="Image 21"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (22).jpg" data-lightbox="gallery" data-title="Image 22"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (22).jpg" alt="Image 22"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (23).jpg" data-lightbox="gallery" data-title="Image 23"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (23).jpg" alt="Image 23"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (24).jpg" data-lightbox="gallery" data-title="Image 24"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (24).jpg" alt="Image 24"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (26).jpg" data-lightbox="gallery" data-title="Image 26"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (26).jpg" alt="Image 26"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (27).jpg" data-lightbox="gallery" data-title="Image 27"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (27).jpg" alt="Image 27"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (28).jpg" data-lightbox="gallery" data-title="Image 28"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (28).jpg" alt="Image 28"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (29).jpg" data-lightbox="gallery" data-title="Image 29"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (29).jpg" alt="Image 29"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (30).jpg" data-lightbox="gallery" data-title="Image 30"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (30).jpg" alt="Image 30"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (31).jpg" data-lightbox="gallery" data-title="Image 31"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (31).jpg" alt="Image 31"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (32).jpg" data-lightbox="gallery" data-title="Image 32"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (32).jpg" alt="Image 32"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (33).jpg" data-lightbox="gallery" data-title="Image 33"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (33).jpg" alt="Image 33"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (34).jpg" data-lightbox="gallery" data-title="Image 34"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (34).jpg" alt="Image 34"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (35).jpg" data-lightbox="gallery" data-title="Image 35"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (35).jpg" alt="Image 35"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (36).jpg" data-lightbox="gallery" data-title="Image 36"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (36).jpg" alt="Image 36"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (37).jpg" data-lightbox="gallery" data-title="Image 37"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (37).jpg" alt="Image 37"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (38).jpg" data-lightbox="gallery" data-title="Image 38"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (38).jpg" alt="Image 38"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (39).jpg" data-lightbox="gallery" data-title="Image 39"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (39).jpg" alt="Image 39"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (40).jpg" data-lightbox="gallery" data-title="Image 40"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (40).jpg" alt="Image 40"></a>
+                <a href="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (41).jpg" data-lightbox="gallery" data-title="Image 41"><img src="/assets/Images/bani-snimki/banq-plewen-drujba4/1 (41).jpg" alt="Image 41"></a>
             </div>
         </div>
     </main>
+
+    <!-- Lightbox2 JS -->
+    <script src="/assets/scripts/lightbox-plus-jquery.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true,
+            'alwaysShowNavOnTouchDevices': true,
+            'albumLabel': "Image %1 of %2",
+            'fadeDuration': 200,
+            'imageFadeDuration': 200,
+            'disableScrolling': true
+          });
+        });
+      </script>
     
     <footer>
         <div id="footer"></div>
