--- a/html/projects_templates/koridori.html
+++ b/html/projects_templates/koridori.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НС Строй</title>
     <link rel="stylesheet" href="/assets/styles/styles.css">
+    <link href="/assets/styles/lightbox.css" rel="stylesheet">
     <script src="/assets/scripts/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,6 +42,23 @@
             </div>
         </div>
     </main>
+
+        <!-- Lightbox2 JS -->
+    <script src="/assets/scripts/lightbox-plus-jquery.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true,
+            'alwaysShowNavOnTouchDevices': true,
+            'albumLabel': "Image %1 of %2",
+            'fadeDuration': 200,
+            'imageFadeDuration': 200,
+            'disableScrolling': true
+          });
+        });
+      </script>
     
     <footer>
         <div id="footer"></div>
